ui/webui/resources/wasm/vendor/zerocopy/tests/ui-nightly/transmute-mut-src-not-intobytes.stderr
error[E0277]: the trait bound `Src: IntoBytes` is not satisfied
 --> tests/ui-nightly/transmute-mut-src-not-intobytes.rs:24:36
  |
 24 | const SRC_NOT_AS_BYTES: &mut Dst = transmute_mut!(&mut Src);
    |                                    ^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `IntoBytes` is not implemented for `Src`
   --> tests/ui-nightly/transmute-mut-src-not-intobytes.rs:17:1
    |
 17 | struct Src;
    | ^^^^^^^^^^
    = note: Consider adding `#[derive(IntoBytes)]` to `Src`
    = help: the following other types implement trait `IntoBytes`:
              ()
              AtomicBool
              AtomicI16
              AtomicI32
              AtomicI64
              AtomicI8
              AtomicIsize
              AtomicU16
            and $N others
note: required by a bound in `Wrap::<&'a mut Src, &'a mut Dst>::transmute_mut`
   --> src/util/macro_util.rs
    |
    |     pub fn transmute_mut(self) -> &'a mut Dst
    |            ------------- required by a bound in this associated function
    |     where
    |         Src: FromBytes + IntoBytes,
    |                          ^^^^^^^^^ required by this bound in `Wrap::<&mut Src, &mut Dst>::transmute_mut`
    = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)
